# JulianOrigliasso.github.io

./: .gitignore  index.html  mockup-admin.html  mockup-auth.html  mockup-listings.html  mockup.html  package-lock.json  package.json  tsconfig.json
backend/crypto_real_estate_api/: .env  crypto_real_estate.db  pyproject.toml  requirements.txt  reset_db.py  test_profiles.sh  wsgi.py
backend/crypto_real_estate_api/alembic/: env.py
backend/crypto_real_estate_api/apache/: crypto_estate.conf
backend/crypto_real_estate_api/app/: main.py
backend/crypto_real_estate_api/scripts/: deploy_godaddy.sh  init_db.py  mysql_migration.py  verify_mysql.py
crypto-real-estate-frontend/: .env  package-lock.json  package.json
crypto-real-estate-frontend/src/components/: BuyerProfileForm.tsx  CreatePropertyDialog.tsx  (+7 more)
crypto-real-estate/backend/crypto_real_estate_api/: alembic.ini  check_db.py  pyproject.toml
crypto-real-estate/backend/crypto_real_estate_api/alembic/versions/: 41d9f15e0c5a_add_photos_field.py
crypto-real-estate/backend/crypto_real_estate_api/app/crud/: user.py
crypto-real-estate/backend/crypto_real_estate_api/app/models/: __init__.py  property.py
crypto-real-estate/backend/crypto_real_estate_api/app/schemas/: __init__.py  user.py
crypto-real-estate/crypto-real-estate-frontend/: index.html  package.json
frontend/crypto-real-estate-web/: .env  index.html  package-lock.json  package.json
src/: App.tsx  index.css
src/components/: PropertyPreview.tsx
src/pages/: CreateListing.tsx  Home.tsx  SubscriptionManagement.tsx
supabase/: config.toml
(+90 files in other folders)
