[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Devin AI <158243242+devin-ai-integration[bot]@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.6"}
psycopg = {extras = ["binary"], version = "^3.2.3"}
sqlalchemy = "^2.0.36"
pydantic-settings = "^2.6.1"
pydantic = "^2.10.3"
alembic = "^1.14.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.19"
psycopg2-binary = "^2.9.10"
itsdangerous = "^2.2.0"
pillow = "^11.0.0"
boto3 = "^1.35.80"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
